feat: IntegraÃ§Ã£o do painel PWA para clientes
- Adicionado painel PWA completo em /painel
- Sistema de autenticaÃ§Ã£o de clientes com verificaÃ§Ã£o por email
- PÃ¡gina de login e dashboard para empresas
- Componente InstallPrompt para instalaÃ§Ã£o PWA
- Service Worker e manifest.json configurados
- Middleware atualizado para proteger rotas /painel/*
- Removido header/footer da pÃ¡gina de login
- Adicionado suporte para instalaÃ§Ã£o PWA no mobile
- Script para criar usuÃ¡rio cliente de teste
- Migrations para tabelas de empresas e usuÃ¡rios clientes
- PÃ¡gina de cadastro de empresas (/anunciar/cadastro)
- IntegraÃ§Ã£o com sistema de empresas existente

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:network": "next dev -H 0.0.0.0",
     "dev:turbo": "next dev --turbo",
     "dev:clean": "next dev --turbo=false",
     "build": "next build",
